[package]
name = "wallet-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
web3 = "0.18.0"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
mongodb = {version = "2.3.1"}
env_logger = "0.9.0"
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-cors = "0.6.2"